--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.4.19",
+    "grunt-notify": "^0.4.1",
     "grunt-parallel": "^0.3.1"
   },
   "dependencies": {
