--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.4.19",
     "grunt-notify": "^0.4.1",
